<resources>
    <string name="app_name">Dial Food</string>

    <string name="action_settings">Settings</string>
    <string name="action_done">Done</string>
    <string name="action_logout">Log out</string>
    <string name="action_delivery">Delivery Status</string>
    <string name="action_history">Order History</string>
    <string name="action_update">Update Profile</string>
    <string name="action_notification">Notification</string>
    <string name="action_edit">Edit</string>

    <string name="logo">Splash Screen</string>
    <string name="email_id">Email Id</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="mobile_no">Mobile No</string>
    <string name="address">Address</string>
    <string name="login">Login</string>
    <string name="submit">submit</string>
    <string name="sign_up">sign up</string>
    <string name="forgot">Forgot password?</string>
    <string name="rs">\u20B9</string>
    <string name="minus">\u2212</string>
    <string name="plus">\u002B</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="discard">Discard</string>
    <string name="discard_order">Are you sure you want to discard your order?</string>
    <string name="empty_cart">Cart is Empty!!!</string>
    <string name="coming_credit">Credit card payment will coming soon. Please proceed with COD</string>
    <string name="cardno">Card No</string>
    <string name="cardhint">1234 1234 1234 1234</string>
    <string name="expiry">Expiry</string>
    <string name="expirymm">MM</string>
    <string name="expiryyy">YY</string>
    <string name="security">Security Code</string>
    <string name="cvv">CVV</string>
    <string name="pay">Pay</string>
    <string name="amount">0</string>
    <string name="total_amount">Total Amount</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email Id</string>
    <string name="valid_email">Enter valid Email id</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_mobile">Enter Mobile No.</string>
    <string name="valid_mobile">Enter valid Mobile No.</string>
    <string name="valid_password">Password must contain atleast six characters</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_city">Select City</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="internet_error">Internet Error</string>
    <string name="registration">Registration</string>
    <string name="register">Register</string>
    <string name="update">Update</string>
    <string name="update_profile">Update Profile</string>
    <string name="loading">Loading...</string>
    <string name="already_register">Email ID already registered</string>
    <string name="invalid_user">Invalid Username or Password</string>
    <string name="select_city">City</string>
    <string name="select_branch">Our Nearest Branch</string>
    <string name="notes">Your city must be with in 3kms from our nearest branch</string>
    <string name="subtotal">Subtotal</string>
    <string name="delivery">Delivery charge</string>
    <string name="total">Grand Total</string>
    <string name="delivery_address">Delivery Address:</string>
    <string name="check_out">proceed to payment</string>
    <string name="order_status">Dial Food - Order Status</string>
    <string name="order_history">Order History</string>
    <string name="something_went">Something went wrong</string>
    <string name="dial_food">Dial Food - Menu</string>
    <string name="my_cart">My Cart</string>
    <string name="processing">processing order...</string>
    <string name="radio_cod">Cash on Delivery</string>
    <string name="radio_card">Credit/Debit Card</string>
    <string name="choose_payment">Choose Payment:</string>
    <string name="no_history">You have not placed any orders yet.</string>
    <string name="password_sent">Password sent successfully</string>
    <string name="password_invalid">Enter registered Email id</string>
    <string name="update_success">Profile updated successfully</string>
    <string name="verify_credential">Verifying Credential...</string>
    <string name="dispatch">Dispatch</string>
    <string name="delivered">Delivered</string>
    <string name="timing_msg">Please place the orders between 7AM to 10PM</string>
    <string name="runtime_permissions_txt">Please enable permissions from app settings.</string>
</resources>
